Use projections instead of event sourced representation in read queries for purchase orders